# facebetter-sdk

./: .gitignore  CHANGELOG.md  Facebetter.podspec  README.md  README_CN.md
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/pixpark/fbexample/: BeautyPanelController.java  CameraHandler.java  GLVideoRenderer.java  HomeActivity.java  MainActivity.java
android/app/src/main/res/drawable/: beauty_panel_background.xml  beauty_type_button_background.xml  btn_beauty_effect_bg.xml  btn_beauty_template_bg.xml  capture_button.xml  header_placeholder.xml  soon_badge.xml  white_area_rounded_top.xml
android/app/src/main/res/layout/: activity_home.xml  activity_main.xml  beauty_panel.xml  beauty_slider.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
demo/android/: settings.gradle
demo/android/app/: build.gradle
demo/android/app/src/androidTest/java/com/pixpark/fbexample/: ExampleInstrumentedTest.java
demo/android/app/src/main/: AndroidManifest.xml
demo/android/app/src/main/res/drawable/: btn_style_no_padding.xml  home_gradient_bg.xml  param_button_background.xml  slogan_underline.xml
demo/android/app/src/main/res/layout/: activity_external_texture.xml  activity_home.xml  activity_language_settings.xml  activity_main.xml  beauty_panel.xml
demo/android/app/src/main/res/values/: strings.xml  themes.xml
demo/android/app/src/main/res/values-night/: themes.xml
demo/android/app/src/main/res/values-zh/: strings.xml
demo/android/gradle/: libs.versions.toml
demo/c++/: CMakeLists.txt  main.cc
demo/cpp/: CMakeLists.txt  README.md  main.cpp
demo/ios/: Podfile
demo/ios/FBExampleObjc/: AppDelegate.m  BeautyPanelViewController.h  BeautyPanelViewController.m  CameraManager.m  CameraViewController.m  ExternalTextureViewController.h  ExternalTextureViewController.m  GLRGBARenderView.h  GLRGBARenderView.m  GLTextureRenderView.h  GLTextureRenderView.m  HomeViewController.h  HomeViewController.m  SceneDelegate.h  SceneDelegate.m  main.m
demo/ios/FBExampleObjc.xcodeproj/: project.pbxproj
demo/ios/FBExampleObjc/assets/filters/modern/contrast/: contrast.fbd
demo/ios/FBExampleObjc/assets/filters/modern/cool_orange/: cool_orange.fbd
demo/ios/FBExampleObjc/assets/filters/modern/island/: island.fbd
demo/ios/FBExampleObjc/assets/filters/modern/past/: past.fbd
demo/ios/FBExampleObjc/assets/filters/modern/polaroid/: polaroid.fbd
demo/ios/FBExampleObjc/assets/filters/modern/unicorn/: unicorn.fbd
demo/ios/FBExampleObjc/assets/filters/modern/years/: years.fbd
demo/ios/FBExampleObjc/assets/filters/portrait/extraordinary/: extraordinary.fbd
demo/ios/FBExampleObjc/assets/filters/portrait/lively/: lively.fbd
demo/ios/FBExampleObjc/assets/filters/portrait/pure/: pure.fbd
demo/ios/FBExampleObjc/assets/filters/portrait/tender_2/: tender_2.fbd
demo/ios/FBExampleObjc/assets/filters/portrait/vivid/: vivid.fbd
demo/ios/FBExampleObjc/assets/stickers/face/rabbit/: rabbit.fbd
demo/macos/: .gitignore  Podfile
demo/macos/FBExampleObjc/: AppDelegate.h  AppDelegate.m  BeautyCameraViewController.h  BeautyCameraViewController.m  BeautyPanelViewController.h  BeautyPanelViewController.m  CameraManager.h  CameraManager.m  GLRGBARenderView.h  GLRGBARenderView.m  HomeViewController.h  HomeViewController.m  ViewController.h  ViewController.m  main.m
demo/macos/FBExampleObjc.xcodeproj/: project.pbxproj
demo/macos/FBExampleObjc/assets/filters/portrait/dawn/: dawn.fbd
demo/macos/FBExampleObjc/assets/filters/portrait/japanese/: japanese.fbd
demo/macos/FBExampleObjc/en.lproj/: Localizable.strings
demo/macos/FBExampleObjc/zh-Hans.lproj/: Localizable.strings
demo/web/react/: README.md  index.html  package-lock.json  package.json  vite.config.js
demo/web/react/public/: filter_mapping.json
demo/web/react/public/assets/filters/portrait/confession/: confession.fbd
demo/web/react/public/assets/filters/portrait/plain/: plain.fbd
demo/web/react/public/assets/filters/portrait/snow/: snow.fbd
demo/web/react/src/: App.jsx  index.css  main.jsx
demo/web/react/src/components/: BeautyPanel.css  BeautyPanel.jsx
demo/web/react/src/views/: BeautyPreview.css  BeautyPreview.jsx  Home.css  Home.jsx
demo/web/tauri/: .gitignore  README.md  package-lock.json  package.json
demo/web/tauri/src-tauri/: Cargo.toml  tauri.conf.json
demo/web/tauri/src-tauri/src/: lib.rs  main.rs
demo/web/vue/: README.md  index.html  package-lock.json  package.json  vite.config.js
demo/web/vue/src/router/: index.js
demo/web/vue/src/views/: BeautyPreview.vue
ios/FBExampleObjc/: AppDelegate.h  AppDelegate.m  BeautyPanelViewController.m  CameraManager.m  CameraViewController.h  CameraViewController.m  GLRGBARenderView.h  GLRGBARenderView.m  HomeViewController.h  HomeViewController.m  SceneDelegate.m  main.m
ios/FBExampleObjc.xcodeproj/: project.pbxproj
ios/FBExampleObjc.xcodeproj/xcshareddata/xcschemes/: FBExampleObjc.xcscheme
ios/FBExampleObjc/Base.lproj/: Main.storyboard
macos/FBExampleObjc/: AppDelegate.m  BeautyPanelViewController.h  BeautyPanelViewController.m  CameraManager.m  GLRGBARenderView.m  HomeViewController.h  HomeViewController.m  ViewController.m  main.m
macos/FBExampleObjc.xcodeproj/: project.pbxproj
macos/FBExampleObjc.xcodeproj/xcshareddata/xcschemes/: FBExampleObjc.xcscheme
scripts/: download_sdk.sh
sdk/: README.md
web/react/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/react/src/: App.css  App.jsx  index.css
web/react/src/components/: BeautyPanel.css  BeautyPanel.jsx
web/react/src/router/: index.jsx
web/react/src/views/: CameraPreview.css  CameraPreview.jsx  Home.css  Home.jsx
web/vue/: README.md  package-lock.json  package.json  vite.config.js
web/vue/src/: App.vue
web/vue/src/components/: BeautyPanel.vue
web/vue/src/router/: index.js
web/vue/src/views/: CameraPreview.vue  Home.vue
(+45 files in other folders)
