[package]
name = "facebetter-demo-tauri"
version = "1.0.0"
description = "Facebetter Web Demo desktop shell"
edition = "2021"
rust-version = "1.70"

[lib]
name = "facebetter_demo_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
